potential fix for safari spacing - made .container a flexbox reordered image divs for project stuff on index page

--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,8 @@ p {
 /*generic container section*/
 .container {
     margin: 1em 7.25em 0 7.25em;
+    display: flex;
+    flex-direction: column;
 }
 
 /*a single project entry*/
@@ -175,7 +177,7 @@ p {
     color: white;
 }
 
-.project-image {
+.proj-img-index {
     position: relative;
     overflow: hidden;
 
@@ -183,9 +185,8 @@ p {
     justify-content: center;
 }
 
-.project-image img {
+.proj-img-index img {
     max-width: 100%;
-    max-height: 100%;
     transition: transform 1s;
     object-fit: contain;
 }
